--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     },
     "homepage": "https://github.com/dagensev/node-api#readme",
     "dependencies": {
-        "express": "^5.1.0"
+        "discord.js": "^14.21.0",
+        "dotenv": "^17.2.0",
+        "express": "^5.1.0",
+        "mysql2": "^3.14.2",
+        "node-cron": "^4.2.1",
+        "openai": "^5.10.1"
     },
     "devDependencies": {
         "nodemon": "^3.1.10"
